--- a/css/custom.css
+++ b/css/custom.css
@@ -644,10 +644,10 @@ input[type=file] {
     display: flex;
     flex-direction: row;
   }
-  .formBox1 :nth-child(1) { order: 1; }
+  /*.formBox1 :nth-child(1) { order: 1; }
   .formBox1 :nth-child(2) { order: 2; }
   .formBox1 :nth-child(3) { order: 4; }
-  .formBox1 :nth-child(4) { order: 3; }
+  .formBox1 :nth-child(4) { order: 3; }*/
 }
 
 /* Medium devices (tablets, less than 992px)*/
