--- a/css/custom.css
+++ b/css/custom.css
@@ -98,6 +98,7 @@ header {
 .navbar-primary .navbar-nav .nav-link.show,
 .navbar-primary .navbar-nav .nav-link.active {
   color: #fff;
+  text-decoration: underline;
 }
 
 .navbar-primary .navbar-toggler {
@@ -213,7 +214,7 @@ background: #295cac !important;
 }
 .navbar-primary .navbar-nav .nav-link span.icon {
   font-size: 24px;
-  margin: 0 20px 0 0;
+  margin: 0 10px 0 0;
 }
 .navbar-brand {
   margin-top: 5px;
@@ -405,7 +406,7 @@ input[type=file] {
   transition: all 0.4s;
 }
 .vertical-nav .nav .nav-link {
-  font-size: .6875rem;
+  font-size: .8rem;
   line-height: 24px;
   display: flex;
 }
@@ -449,10 +450,10 @@ input[type=file] {
 .form-row a.badge {
   color: #ffffff;
   border-radius: 50%;
-  padding: 4px 7px;
+  padding: 2px 7px;
   font-size: 100%;
   margin: 0 0 0 5px;
-  height: 22px;
+  height: 18px;
 }
 .setting-list {
   list-style: none;
