--- a/css/login.css
+++ b/css/login.css
@@ -11,8 +11,7 @@ a {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background: url(../images/login_bg.jpg) no-repeat #0d47a1;
-	background-size: 100%;
+	background: url(../images/login_bg.jpg) no-repeat 50% 50% #0d47a1;
 }
 form {
 	padding-top: 10px;
