--- a/css/bill_page.css
+++ b/css/bill_page.css
@@ -11,7 +11,11 @@ body {
   font-weight: 400;
 }
 h1 {
-	font-size: 1rem;
+  font-size: 1.5rem;
+  width: 100%;
+}
+h1 span.phone {
+  font-size: 1rem;
 }
 h3 {
 	font-size: 1.5rem;
@@ -48,7 +52,7 @@ h3 {
   text-align: right;
 }
 .bill-page h3 {
-  color: blueviolet;
+  color: darkblue;
   margin-bottom: 40px;
 }
 .bill-page label {
