--- a/css/custom.css
+++ b/css/custom.css
@@ -99,15 +99,16 @@ header {
 .navbar-primary .navbar-nav .nav-link.disabled {
   color: rgba(255, 255, 255, 0.25);
 }
-
+.navbar-primary .navbar-nav .nav-item.active {
+  border-bottom: 1px solid #ffffff;
+}
 .navbar-primary .navbar-nav .show > .nav-link,
 .navbar-primary .navbar-nav .active > .nav-link,
 .navbar-primary .navbar-nav .nav-link.show,
 .navbar-primary .navbar-nav .nav-link.active {
   color: #fff;
-  text-decoration: underline;
+  height: 50px;
 }
-
 .navbar-primary .navbar-toggler {
   color: rgba(255, 255, 255, 0.5);
   border-color: rgba(255, 255, 255, 0.1);
@@ -150,6 +151,11 @@ header {
   top: -10px;
 }
 /* navbar styles end*/
+.icon-info {
+  color: #0d47a1;
+  font-size: 22px;
+  margin-left: 10px;
+}
 .container1 {
   display: flex;
   flex-wrap: wrap;
@@ -160,7 +166,9 @@ header {
   flex-basis: 100%;
   height: 0;
 }
-
+.navbar-nav {
+  margin-top: 8px;
+}
 /* header styles */
 .topbar .nav-item .nav-link .img-profile {
   height: 2rem;
@@ -216,11 +224,11 @@ background: #295cac !important;
 .navbar-primary .navbar-nav .nav-link {
   font-size: 1rem;
   line-height: 24px;
-  font-weight: 700;
+  font-weight: 600;
   display: flex;
 }
 .navbar-primary .navbar-nav .nav-link span.icon {
-  font-size: 24px;
+  font-size: 20px;
   margin: 0 10px 0 0;
 }
 .navbar-brand {
@@ -390,6 +398,7 @@ input[type=file] {
 .vertical-nav .nav .nav-link span.icon {
   font-size: 1rem;
   margin: 4px 20px 0 0;
+  display: none;
 }
 .vertical-nav .nav .nav-link {
   color: #ffffff;
@@ -437,6 +446,9 @@ input[type=file] {
   padding-left: 25px;
 }
 /**/
+.form-control::placeholder {
+  color: #ced4da;
+}
 /* Extra small devices (portrait phones, less than 576px)*/
 /* No media query since this is the default in Bootstrap*/
 
@@ -504,7 +516,7 @@ input[type=file] {
   .navbar-icon-top.navbar-expand-lg .navbar-nav .nav-link {
     text-align: center;
     display: table-cell;
-    height: 70px;
+    height: 46px;
     vertical-align: middle;
     padding-top: 0;
     padding-bottom: 0;
