--- a/icomoon/style.css
+++ b/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?l0tw7o');
-  src:  url('fonts/icomoon.eot?l0tw7o#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?l0tw7o') format('truetype'),
-    url('fonts/icomoon.woff?l0tw7o') format('woff'),
-    url('fonts/icomoon.svg?l0tw7o#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?35xgm3');
+  src:  url('fonts/icomoon.eot?35xgm3#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?35xgm3') format('truetype'),
+    url('fonts/icomoon.woff?35xgm3') format('woff'),
+    url('fonts/icomoon.svg?35xgm3#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-info:before {
+  content: "\e906";
+}
 .icon-Hepand-Support:before {
   content: "\e900";
 }
